--- a/Softuni/4. Applications/6. Routing/Team-Manager-Skeleton/templates/catalog/teamCatalog.hbs
+++ b/Softuni/4. Applications/6. Routing/Team-Manager-Skeleton/templates/catalog/teamCatalog.hbs
@@ -1,7 +1,7 @@
+{{> header}}
 <div class="container">
-    {{> header}}
     {{#if hasNoTeam}}
-        <a href="#/create" class="btn btn-default">Create Team</a>
+        <a href="/create" class="btn btn-default">Create Team</a>
     {{/if}}
     <h1>Catalog Page</h1>
     <div>
