--- a/Softuni/4. Applications/6. Routing/Team-Manager-Skeleton/templates/login/loginForm.hbs
+++ b/Softuni/4. Applications/6. Routing/Team-Manager-Skeleton/templates/login/loginForm.hbs
@@ -1,7 +1,7 @@
-<form action="#/login" method="post">
+<form action="/login" method="post">
     <div class="form-group">
         <label for="username">Username:</label>
-        <input class="form-control" type="text" id="username" name="username"/>
+        <input class="form-control" type="text" id="username" name="email"/>
     </div>
     <div class="form-group">
         <label for="password">Password:</label>
