--- a/Softuni/4. Applications/7. SPA/ShoeShelf App/templates/details.hbs
+++ b/Softuni/4. Applications/7. SPA/ShoeShelf App/templates/details.hbs
@@ -1,23 +1,21 @@
 {{>header}}
 <div class="offer-details">
-    <h1>Under Armour HOVR</h1>
+    <h1>{{offer.productName}}</h1>
     <div class="info">
-        <img src="https://i1.t4s.cz/products/3023295-602/under-armour-ua-w-hovr-phantom-se-trek-263676-3023295-603.jpg">
-        <div class="description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facilis explicabo
-            voluptatibus odio? Deleniti amet qui tenetur ipsa enim blanditiis laboriosam distinctio, dignissimos
-            cupiditate, delectus autem. Explicabo exercitationem voluptatibus reprehenderit repellat. Lorem
-            ipsum dolor, sit amet consectetur adipisicing elit. Tempore reiciendis maiores aliquid nobis,
-            accusantium dolore iste ipsa atque deserunt corrupti maxime, alias neque libero temporibus expedita
-            magni perferendis aut nostrum.
+        <img src="{{ offer.imageURL }}">
+        <div class="description"> {{ offer.description }}
             <br>
             <br>
-            <p class="price">$149.99</p>
+            <p class="price">${{ offer.price }}</p>
         </div>
     </div>
     <div class="actions">
+        {{#if offer.imTheSalesman}}
         <a>Edit</a>
-        <a>Delete</a>
+        <a href="#/delete/{{ offer.id }}">Delete</a>
+        {{else}}
         <a>Buy</a>
+        {{/if}}
         <span>You bought it</span>
     </div>
 </div>
