--- a/Softuni/4. Applications/7. SPA/ShoeShelf App/templates/editOffer.hbs
+++ b/Softuni/4. Applications/7. SPA/ShoeShelf App/templates/editOffer.hbs
@@ -1,21 +1,21 @@
 {{>header}}
 <h1>Edit Offer</h1>
 <p class="message"></p>
-<form>
+<form action="#/edit/{{ offer.id }}" method="POST">
     <div>
-        <input type="text" placeholder="Name...">
+        <input type="text" placeholder="Name..." name="productName" value={{offer.productName}}>
     </div>
     <div>
-        <input type="text" placeholder="Price...">
+        <input type="text" placeholder="Price..." name="price" value={{offer.price}}>
     </div>
     <div>
-        <input type="text" placeholder="Image url...">
+        <input type="text" placeholder="Image url..." name="imageURL" value={{offer.imageURL}}>
     </div>
     <div>
-        <textarea placeholder="Give us some description about this offer..."></textarea>
+        <textarea placeholder="Give us some description about this offer..." name="description" value={{offer.description}}></textarea>
     </div>
     <div>
-        <input type="text" placeholder="Brand...">
+        <input type="text" placeholder="Brand..." name="brand" value={{offer.brand}}>
     </div>
     <div>
         <button>Edit</button>
