--- a/Softuni/5. Back-end/3. ExpressJS & Templating/catagram/views/cats.handlebars
+++ b/Softuni/5. Back-end/3. ExpressJS & Templating/catagram/views/cats.handlebars
@@ -5,8 +5,10 @@
     <input type="submit" value="create" />
 </form>
 
+{{#if cats}}
 <ul>
-    <li>Cat name 1</li>
-    <li>Cat name 2</li>
-    <li>Cat name 3</li>
+    {{#each cats}}
+        {{> cat}}
+    {{/each}}
 </ul>
+{{/if}}
